dockerfile pentesting lab

--- a/4-Hakinga/Aitorpena/Dockerfile
+++ b/4-Hakinga/Aitorpena/Dockerfile
@@ -4,6 +4,7 @@ RUN apt update
 RUN apt dist-upgrade -y
 RUN apt install -y kali-desktop-xfce xrdp
 RUN apt install -y nikto nmap 
+RUN apt install -y kali-tools-top10 --fix-missing
 
 RUN RUN echo "root:root" | chpasswd
 
