add volume for capture

--- a/4-Hakinga/Aitorpena/docker-compose.yml
+++ b/4-Hakinga/Aitorpena/docker-compose.yml
@@ -6,6 +6,8 @@ services:
       context: .
     tty: true
     stdin_open: true
+    volumes:
+      - ./scan-output:/root/scan-output
     networks:
       - pentesting-lab-network
 
