--- a/4-Hakinga/Aitorpena/Dockerfile
+++ b/4-Hakinga/Aitorpena/Dockerfile
@@ -2,7 +2,8 @@ FROM kalilinux/kali-rolling
 
 RUN apt update
 RUN apt dist-upgrade -y
-RUN apt install -y nikto nmap 
+RUN apt install -y nikto nmap net-tools tcpdump
+RUN apt install -y man
 
 RUN RUN echo "root:root" | chpasswd
 
