--- a/4-Hakinga/Aitorpena/hacking-lab/docker-compose.yml
+++ b/4-Hakinga/Aitorpena/hacking-lab/docker-compose.yml
@@ -32,6 +32,19 @@ services:
     networks:
       - pentesting-lab-network
 
+  ftp-server:
+    container_name: my-ftp-server
+    environment:
+      - FTP_PASS=123
+      - FTP_USER=user
+    image: garethflowers/ftp-server
+    ports:
+      - '20-21:20-21/tcp'
+      - '40000-40009:40000-40009/tcp'
+    volumes:
+      - '/data:/home/user'
+
+      
 networks:
   pentesting-lab-network:
     driver: bridge
