--- a/4-Hakinga/Aitorpena/hacking-lab/docker-compose.yml
+++ b/4-Hakinga/Aitorpena/hacking-lab/docker-compose.yml
@@ -35,16 +35,16 @@ services:
   ftp-server:
     container_name: my-ftp-server
     environment:
-      - FTP_PASS=123
+      - FTP_PASS=louise
       - FTP_USER=user
     image: garethflowers/ftp-server
     ports:
       - '20-21:20-21/tcp'
       - '40000-40009:40000-40009/tcp'
     volumes:
-      - '/data:/home/user'
+      - './data:/home/user'
 
-      
+
 networks:
   pentesting-lab-network:
     driver: bridge
