--- a/4-Hakinga/Aitorpena/hacking-lab/docker-compose.yml
+++ b/4-Hakinga/Aitorpena/hacking-lab/docker-compose.yml
@@ -43,7 +43,8 @@ services:
       - '40000-40009:40000-40009/tcp'
     volumes:
       - './data:/home/user'
-
+    networks:
+      - pentesting-lab-network
 
 networks:
   pentesting-lab-network:
