--- a/4-Hakinga/Aitorpena/hacking-lab/docker-compose.yml
+++ b/4-Hakinga/Aitorpena/hacking-lab/docker-compose.yml
@@ -2,8 +2,7 @@ version: '3'
 
 services:
   kali-rolling:
-    build:
-      context: .
+    image: mikeldalmauc/kali-si
     tty: true
     stdin_open: true
     volumes:
