--- a/4-Hakinga/Aitorpena/azterketa 3/docker-compose.yml
+++ b/4-Hakinga/Aitorpena/azterketa 3/docker-compose.yml
@@ -38,8 +38,11 @@ services:
     image: mikeldalmauc/m15:1.0
     networks:
       - lab-network
-  
+
+  kali:
+    image: mikeldalmauc/kali-si
+    networks:
+      - lab-network
+
 networks:
   lab-network:
-    external: true
-    name: $network
